Task Repo, Updates